2013-07-25 Initial release (0.1.0) to github.

2013-07-25 Made testing script python.
           Improved naming of temp directories.
           Reordered config schema and improved help strings.
           Released 0.1.1 to github.